--- a/hw4.tex
+++ b/hw4.tex
@@ -23,7 +23,7 @@
 \section{Introduction}
 
 Thank you for your supports one more time. Indeed, at this process, I have learned a lot of things,
-I have started to enhance to my digital library, at the same time I also learned where and how to find 
+I have started to enhance to my digital library, at the same time I am also learning where and how to find 
 the things I need. Now, let's solve to below problems.
 \section{Analysis of Problems}
 \subsection{Problem 1} \textbf{Consider the prime p = 9929 and the primitive element 2.}
