--- a/hw4.tex
+++ b/hw4.tex
@@ -100,7 +100,7 @@ n = p.q.r = 29.31.37 = 33263\\
 $\phi $(n) = (p−1)(q−1)(r−1) = 28.30.36 = 30240\\
 \end{center}
 \begin{center}
-    d = $e^{-1}$ (mod $\phi$(n)) = $17^{-1}$ (mod 30240)\\
+    d = $e^{-1}$ (mod $\phi$(n)) = $17^{-1}$ (mod 30240) = 10673\\
 
 \end{center}
 
@@ -113,7 +113,7 @@ $\phi $(n) = (p−1)(q−1)(r−1) = 28.30.36 = 30240\\
 \end{center}
 
 \begin{center}
-    $M_{1}$ = $29774^{423953}$ (mod 33263) = 10000
+    $M_{1}$ = $29774^{10673}$ (mod 33263) = 10000
  
 \end{center}
 
