--- a/hw4.tex
+++ b/hw4.tex
@@ -22,9 +22,8 @@
 \maketitle
 \section{Introduction}
 
-Thank you for your supports one more time. Indeed, at this process, I have learned a lot of things,
-I have started to enhance to my digital library, at the same time I am also learning where and how to find 
-the things I need. Now, let's solve to below problems.
+We have 5 problems and try to solve those.\\
+
 \section{Analysis of Problems}
 \subsection{Problem 1} \textbf{Consider the prime p = 9929 and the primitive element 2.}
 \subsubsection{\textbf{Show the steps of the Diffie-Hellman between Alice and Bob for a = 1983 and b = 2014.}}
