--- a/hw4.tex
+++ b/hw4.tex
@@ -119,5 +119,7 @@ $\phi $(n) = (p−1)(q−1)(r−1) = 28.30.36 = 30240\\
 
 \subsubsection{\textbf{Explain why RSA with three primes algorithm is not preferred.}}
 
+Indeed I read different  papers on this issues. But I don't want to copy-paste because of I haven't 
+mathematical backround. I study read and understand it with its different ways. I think this is best for me.
 
 \end{document}
